--- a/src/plugins/cvs/settingspage.ui
+++ b/src/plugins/cvs/settingspage.ui
@@ -20,7 +20,7 @@
       <item row="0" column="0">
        <widget class="QLabel" name="commandLabel">
         <property name="text">
-         <string>CVS Command:</string>
+         <string>CVS command:</string>
         </property>
        </widget>
       </item>
@@ -30,7 +30,7 @@
       <item row="1" column="0">
        <widget class="QLabel" name="rootLabel">
         <property name="text">
-         <string>CVS Root:</string>
+         <string>CVS root:</string>
         </property>
        </widget>
       </item>
@@ -49,7 +49,7 @@
       <item row="1" column="0">
        <widget class="QLabel" name="diffOptionsLabel">
         <property name="text">
-         <string>Diff Options:</string>
+         <string>Diff options:</string>
         </property>
        </widget>
       </item>
@@ -117,6 +117,10 @@
    <extends>QWidget</extends>
    <header location="global">utils/pathchooser.h</header>
    <container>1</container>
+   <slots>
+    <signal>editingFinished()</signal>
+    <signal>browsingFinished()</signal>
+   </slots>
   </customwidget>
  </customwidgets>
  <resources/>
