--- a/src/plugins/qt4projectmanager/qt-maemo/maemosettingswidget.ui
+++ b/src/plugins/qt4projectmanager/qt-maemo/maemosettingswidget.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>448</width>
-    <height>307</height>
+    <width>550</width>
+    <height>350</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -139,14 +139,14 @@
             <item>
              <widget class="QRadioButton" name="deviceButton">
               <property name="text">
-               <string>Remote Device</string>
+               <string>Remote device</string>
               </property>
              </widget>
             </item>
             <item>
              <widget class="QRadioButton" name="simulatorButton">
               <property name="text">
-               <string>Local Simulator</string>
+               <string>Local simulator</string>
               </property>
              </widget>
             </item>
@@ -186,7 +186,7 @@
          <item row="3" column="0">
           <widget class="QLabel" name="hostNameLabel">
            <property name="text">
-            <string>Host Name:</string>
+            <string>Host name:</string>
            </property>
           </widget>
          </item>
@@ -248,7 +248,7 @@
          <item row="5" column="0">
           <widget class="QLabel" name="connectionTimeoutLabel">
            <property name="text">
-            <string>Connection Timeout:</string>
+            <string>Connection timeout:</string>
            </property>
           </widget>
          </item>
@@ -262,7 +262,7 @@
          <item row="6" column="0">
           <widget class="QLabel" name="userNameLabel">
            <property name="text">
-            <string>User Name:</string>
+            <string>User name:</string>
            </property>
           </widget>
          </item>
