--- a/share/qtcreator/qmldesigner/propertyeditor/Qt/nonecolorbutton.css
+++ b/share/qtcreator/qmldesigner/propertyeditor/Qt/nonecolorbutton.css
@@ -1,12 +1,11 @@
 QPushButton {
-    border-image: url(:/qmldesigner/images/button_color_none_normal.png) 3;
-    border-width: 3;
+    border-image: url(:/qmldesigner/images/button_color_none_normal.png);
  }
  
   QPushButton:pressed {
-    border-image: url(:/qmldesigner/images/button_color_none_pressed.png) 3;
+    border-image: url(:/qmldesigner/images/button_color_none_pressed.png);
  }
  
  QPushButton:checked {
-    border-image: url(:/qmldesigner/images/button_color_none_pressed.png) 3;
+    border-image: url(:/qmldesigner/images/button_color_none_pressed.png);
  }
