--- a/src/plugins/projectexplorer/projectwelcomepagewidget.ui
+++ b/src/plugins/projectexplorer/projectwelcomepagewidget.ui
@@ -166,7 +166,7 @@
  <customwidgets>
   <customwidget>
    <class>Utils::WelcomeModeTreeWidget</class>
-   <extends>QWidget</extends>
+   <extends>QScrollArea</extends>
    <header location="global">utils/welcomemodetreewidget.h</header>
   </customwidget>
   <customwidget>
