--- a/src/plugins/projectexplorer/projectexplorersettingspage.ui
+++ b/src/plugins/projectexplorer/projectexplorersettingspage.ui
@@ -21,7 +21,7 @@
        <enum>QFormLayout::ExpandingFieldsGrow</enum>
       </property>
       <item row="1" column="1">
-       <widget class="Utils::PathChooser" name="projectsDirectoryPathChooser"/>
+       <widget class="Utils::PathChooser" name="projectsDirectoryPathChooser" native="true"/>
       </item>
       <item row="0" column="0" colspan="2">
        <widget class="QRadioButton" name="currentDirectoryRadioButton">
@@ -58,21 +58,28 @@
       <item>
        <widget class="QCheckBox" name="saveAllFilesCheckBox">
         <property name="text">
-         <string>Save all files before Build</string>
+         <string>Save all files before build</string>
         </property>
        </widget>
       </item>
       <item>
        <widget class="QCheckBox" name="buildProjectBeforeRunCheckBox">
         <property name="text">
-         <string>Always build Project before Running</string>
+         <string>Always build project before running</string>
         </property>
        </widget>
       </item>
       <item>
        <widget class="QCheckBox" name="showCompileOutputCheckBox">
         <property name="text">
-         <string>Show Compiler Output on building</string>
+         <string>Show compiler output on building</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QCheckBox" name="cleanOldAppOutputCheckBox">
+        <property name="text">
+         <string>Clear old appliction output</string>
         </property>
        </widget>
       </item>
