Maemo settings: Turn timeout field into a spinbox.
Also, the hint on milliseconds was wrong. The unit is seconds.
As requested by Friedemann.

--- a/src/plugins/qt4projectmanager/qt-maemo/maemosettingswidget.ui
+++ b/src/plugins/qt4projectmanager/qt-maemo/maemosettingswidget.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>484</width>
-    <height>307</height>
+    <width>563</width>
+    <height>336</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -18,6 +18,9 @@
     <layout class="QVBoxLayout" name="verticalLayout_3">
      <item>
       <layout class="QFormLayout" name="formLayout">
+       <property name="fieldGrowthPolicy">
+        <enum>QFormLayout::AllNonFixedFieldsGrow</enum>
+       </property>
        <item row="0" column="0">
         <widget class="QLabel" name="configurationLabel">
          <property name="text">
@@ -213,11 +216,37 @@
             </widget>
            </item>
            <item row="5" column="1">
-            <widget class="QLineEdit" name="timeoutLineEdit">
-             <property name="placeholderText">
-              <string>Timeout value in milliseconds</string>
-             </property>
-            </widget>
+            <layout class="QHBoxLayout" name="horizontalLayout_5">
+             <item>
+              <widget class="QSpinBox" name="timeoutSpinBox">
+               <property name="suffix">
+                <string>s</string>
+               </property>
+               <property name="maximum">
+                <number>10000</number>
+               </property>
+               <property name="singleStep">
+                <number>10</number>
+               </property>
+               <property name="value">
+                <number>1000</number>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <spacer name="horizontalSpacer">
+               <property name="orientation">
+                <enum>Qt::Horizontal</enum>
+               </property>
+               <property name="sizeHint" stdset="0">
+                <size>
+                 <width>40</width>
+                 <height>20</height>
+                </size>
+               </property>
+              </spacer>
+             </item>
+            </layout>
            </item>
            <item row="6" column="0">
             <widget class="QLabel" name="userNameLabel">
@@ -370,22 +399,6 @@
     <hint type="destinationlabel">
      <x>424</x>
      <y>231</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>timeoutLineEdit</sender>
-   <signal>editingFinished()</signal>
-   <receiver>MaemoSettingsWidget</receiver>
-   <slot>timeoutEditingFinished()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>335</x>
-     <y>202</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>425</x>
-     <y>187</y>
     </hint>
    </hints>
   </connection>
