--- a/src/plugins/projectexplorer/projectwelcomepagewidget.ui
+++ b/src/plugins/projectexplorer/projectwelcomepagewidget.ui
@@ -49,7 +49,7 @@
               </sizepolicy>
              </property>
              <property name="text">
-              <string>Resume Session</string>
+              <string>Recent Sessions</string>
              </property>
              <property name="alignment">
               <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
