QmlDesigner: new resources for the property editor
Some more icons for font styles and clearer icons for alignment

--- a/src/plugins/qmldesigner/components/resources/resources.qrc
+++ b/src/plugins/qmldesigner/components/resources/resources.qrc
@@ -96,5 +96,11 @@
         <file>images/scrollbar-borderimage-vertical.png</file>
         <file>images/aspectlockset.png</file>
         <file>images/aspectlockoff.png</file>
+        <file>images/button-pressed-left.png</file>
+        <file>images/button-pressed-middle.png</file>
+        <file>images/button-pressed-right.png</file>
+        <file>images/button-normal-left.png</file>
+        <file>images/button-normal-middle.png</file>
+        <file>images/button-normal-right.png</file>
     </qresource>
 </RCC>
