Revert "Welcome mode: Base on QScrollArea."
No need for scrolling after my last commit.

This reverts commit 577057d2a96edc48ad28a1f62285928616bf3d56.

--- a/src/plugins/projectexplorer/projectwelcomepagewidget.ui
+++ b/src/plugins/projectexplorer/projectwelcomepagewidget.ui
@@ -159,7 +159,7 @@
  <customwidgets>
   <customwidget>
    <class>Utils::WelcomeModeTreeWidget</class>
-   <extends>QScrollArea</extends>
+   <extends>QWidget</extends>
    <header location="global">utils/welcomemodetreewidget.h</header>
    <container>1</container>
   </customwidget>
