--- a/src/plugins/qt4projectmanager/gettingstartedwelcomepagewidget.ui
+++ b/src/plugins/qt4projectmanager/gettingstartedwelcomepagewidget.ui
@@ -340,7 +340,7 @@
  <customwidgets>
   <customwidget>
    <class>Utils::WelcomeModeTreeWidget</class>
-   <extends>QScrollArea</extends>
+   <extends>QWidget</extends>
    <header location="global">utils/welcomemodetreewidget.h</header>
   </customwidget>
   <customwidget>
