--- a/src/plugins/welcome/communitywelcomepagewidget.ui
+++ b/src/plugins/welcome/communitywelcomepagewidget.ui
@@ -105,7 +105,7 @@
  <customwidgets>
   <customwidget>
    <class>Utils::WelcomeModeTreeWidget</class>
-   <extends>QScrollArea</extends>
+   <extends>QWidget</extends>
    <header location="global">utils/welcomemodetreewidget.h</header>
   </customwidget>
   <customwidget>
