--- a/src/plugins/qmlinspector/startexternalqmldialog.ui
+++ b/src/plugins/qmlinspector/startexternalqmldialog.ui
@@ -7,11 +7,17 @@
     <x>0</x>
     <y>0</y>
     <width>425</width>
-    <height>198</height>
+    <height>278</height>
    </rect>
   </property>
+  <property name="minimumSize">
+   <size>
+    <width>425</width>
+    <height>278</height>
+   </size>
+  </property>
   <property name="windowTitle">
-   <string>Start Debugging QML and C++ simultaneously</string>
+   <string>Start Simultaneous QML and C++ Debugging </string>
   </property>
   <layout class="QVBoxLayout">
    <property name="spacing">
@@ -72,6 +78,26 @@
         <string>&lt;No project&gt;</string>
        </property>
       </widget>
+     </item>
+     <item row="4" column="0">
+      <widget class="QLabel" name="labelViewerPath">
+       <property name="text">
+        <string>Viewer path:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="4" column="1">
+      <widget class="QLineEdit" name="viewerPathLineEdit"/>
+     </item>
+     <item row="5" column="0">
+      <widget class="QLabel" name="labelViewerArguments">
+       <property name="text">
+        <string>Viewer arguments:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="5" column="1">
+      <widget class="QLineEdit" name="viewerArgumentsLineEdit"/>
      </item>
     </layout>
    </item>
