Prettify the Wizard
I created a nicer blue arrow by default and
use standard icons on X11 where possible.
Note that we still need an alternative solution
for mac.

Reviewed-by:thorbjorn

--- a/src/libs/utils/utils.qrc
+++ b/src/libs/utils/utils.qrc
@@ -1,5 +1,6 @@
 <RCC>
     <qresource prefix="/utils">
         <file>images/removesubmitfield.png</file>
+        <file>images/arrow.png</file>
     </qresource>
 </RCC>
