Styled output panes for qt quick designer

--- a/src/plugins/qmldesigner/components/resources/resources.qrc
+++ b/src/plugins/qmldesigner/components/resources/resources.qrc
@@ -97,6 +97,7 @@
         <file>images/aspectlockset.png</file>
         <file>images/aspectlockoff.png</file>
         <file>images/button-pressed-left.png</file>
+        <file>outputpane-style.css</file>
         <file>images/button-pressed-middle.png</file>
         <file>images/button-pressed-right.png</file>
         <file>images/button-normal-left.png</file>
